fix: remove debug code.
Signed-off-by: Joyce <joycebrum@google.com>

--- a/.github/workflows/update-deb-package-snapshots.yml
+++ b/.github/workflows/update-deb-package-snapshots.yml
@@ -3,7 +3,6 @@ on:
   # will send emails to last editor of this cron syntax (distroless-bot)
   schedule:
     - cron:  '30 20 * * *'
-  workflow_dispatch:
 
 permissions:
   contents: read
@@ -21,15 +20,15 @@ jobs:
       with:
         go-version: '1.20'
 
-    # - name: Run update script
-    #   run: ./updateWorkspaceSnapshots.sh
+    - name: Run update script
+      run: ./updateWorkspaceSnapshots.sh
 
-    # - name: Run update sboms script
-    #   run: |
-    #     for i in $(seq 5); do
-    #       bazel --bazelrc=$GITHUB_WORKSPACE/.github/workflows/ci.bazelrc fetch //private/pkg/test/oci_image:test_sboms && break || sleep 20;
-    #     done
-    #     bazel run @//private/pkg/test/oci_image:test_sboms
+    - name: Run update sboms script
+      run: |
+        for i in $(seq 5); do
+          bazel --bazelrc=$GITHUB_WORKSPACE/.github/workflows/ci.bazelrc fetch //private/pkg/test/oci_image:test_sboms && break || sleep 20;
+        done
+        bazel run @//private/pkg/test/oci_image:test_sboms
 
     - name: Create commits
       id: create-commits
