--- a/.github/workflows/update-deb-package-snapshots.yml
+++ b/.github/workflows/update-deb-package-snapshots.yml
@@ -3,6 +3,8 @@ on:
   # will send emails to last editor of this cron syntax (distroless-bot)
   schedule:
     - cron: "35 20 * * *"
+  # allow this workflow to be manually run
+  workflow_dispatch:
 
 permissions:
   contents: read
