Only create `knife` updates for actual changes
Signed-off-by: Appu Goundan <appu@google.com>

--- a/.github/workflows/update-deb-package-snapshots.yml
+++ b/.github/workflows/update-deb-package-snapshots.yml
@@ -22,10 +22,11 @@ jobs:
         with:
           go-version: "1.20"
 
-      - name: Update snapshots and lock using "knife"
-        run: ./knife update-snapshots && ./knife lock
+      - name: Update snapshots
+        run: ./knife github-update-snapshots
 
       - name: Run update sboms script
+        if: env.DISTROLESS_DIFF
         run: |
           for i in $(seq 5); do
             bazel --bazelrc=$GITHUB_WORKSPACE/.github/workflows/ci.bazelrc fetch //private/pkg/test/oci_image:test_sboms && break || sleep 20;
@@ -33,16 +34,9 @@ jobs:
           bazel run @//private/pkg/test/oci_image:test_sboms
 
       - name: Create commits
+        if: env.DISTROLESS_DIFF
         id: create-commits
         run: |
-          # Check work tree and end successfully if empty
-          if [ -z "$(git status --porcelain)" ]; then
-            echo "Nothing to commit";
-            echo "HAS_CHANGES=FALSE" >> "$GITHUB_OUTPUT"
-            exit 0;
-          fi
-          echo "HAS_CHANGES=TRUE" >> "$GITHUB_OUTPUT"
-
           git checkout -b update-snapshots
 
           # Set identity.
@@ -55,11 +49,13 @@ jobs:
           git push --force origin HEAD
 
       - name: Create Pull Request
-        if: steps.create-commits.outputs.HAS_CHANGES == 'TRUE'
+        if: env.DISTROLESS_DIFF
         env:
           GH_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
         run: |
-          if ! OUTPUT=$(gh pr create -B main -H update-snapshots -t "Bumping packages to latest stable versions" -b "Bumping packages to latest stable versions" 2>&1) ; then
+          BODY_FILE=$(mktemp)
+          printf "Bumping packages to latest stable version\n\`\`\`diff\n$DISTROLESS_DIFF\n\`\`\`\n" >> $BODY_FILE
+          if ! OUTPUT=$(gh pr create -B main -H update-snapshots -t "Bumping packages to latest stable versions" --body-file "$BODY_FILE" 2>&1) ; then
             echo $OUTPUT
             if [[ "${OUTPUT}" =~ "already exists" ]]; then
               echo "PR already exists and it was updated. Ending successfully";
