--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -6,7 +6,7 @@ load("//base:distro.bzl", "DISTROS")
 
 package(default_visibility = ["//visibility:public"])
 
-NODEJS_MAJOR_VERISONS = ("18", "20")
+NODEJS_MAJOR_VERISONS = ("18", "20", "22")
 
 MODE = [
     "",
