--- a/java/BUILD
+++ b/java/BUILD
@@ -1,9 +1,9 @@
 load("@container_structure_test//:defs.bzl", "container_structure_test")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("//:java_archives.bzl", "JAVA_RELEASE_VERSIONS")
 load("//base:distro.bzl", "DISTROS")
 load("//java:jre_ver.bzl", "jre_ver")
+load("//private/extensions:java.bzl", "JAVA_RELEASE_VERSIONS")
 load("//private/oci:defs.bzl", "java_image")
 load("//private/util:deb.bzl", "deb")
 load("//private/util:java_cacerts.bzl", "java_cacerts")
