--- a/.github/workflows/update-temurin-packages.yml
+++ b/.github/workflows/update-temurin-packages.yml
@@ -1,4 +1,4 @@
-name: update-snapshots
+name: update-temurin-packages
 on:
   # will send emails to last editor of this cron syntax (distroless-bot)
   schedule:
