--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -12,6 +12,13 @@ bazel_dep(name = "rules_rust", version = "0.49.1")
 bazel_dep(name = "container_structure_test", version = "1.16.0")
 bazel_dep(name = "rules_oci", version = "1.7.5")
 bazel_dep(name = "rules_distroless", version = "0.3.7")
+bazel_dep(name = "rules_python", version = "0.35.0")
+
+### PYTHON ###
+python.toolchain(
+    ignore_root_user_error = True,
+    python_version = "3.11",
+)
 
 ### GO ####
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
