--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -14,6 +14,11 @@ bazel_dep(name = "rules_oci", version = "1.7.5")
 bazel_dep(name = "rules_distroless", version = "0.3.8")
 bazel_dep(name = "rules_python", version = "0.35.0")
 
+### OCI ###
+oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
+oci.toolchains(crane_version = "v0.18.0")
+use_repo(oci, "oci_crane_toolchains")
+
 ### PYTHON ###
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.toolchain(
