Add gcc-12-base for common gcc/c++ lib info
Signed-off-by: Appu Goundan <appu@google.com>

--- a/cc/BUILD
+++ b/cc/BUILD
@@ -30,6 +30,7 @@ package(default_visibility = ["//visibility:public"])
         name = ("cc" if (not mode) else mode[1:]) + "_" + user + "_" + arch + "_" + distro,
         base = "//base" + (mode if mode else ":base") + "_" + user + "_" + arch + "_" + distro,
         tars = [
+            deb.package(arch, distro, "gcc-12-base"),
             deb.package(arch, distro, "libgomp1"),
             deb.package(arch, distro, "libstdc++6"),
             deb.package(arch, distro, "libgcc-s1"),
