--- a/.github/workflows/image-check.yaml
+++ b/.github/workflows/image-check.yaml
@@ -9,6 +9,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+permissions:
+  pull-requests: write
+  
 jobs:
   diff:
     runs-on: distroless-ci-large-ubuntu-22.04
