--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -1,8 +1,8 @@
 load("@container_structure_test//:defs.bzl", "container_structure_test")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("//:checksums.bzl", "ARCHITECTURES")
 load("//base:distro.bzl", "DISTROS")
+load("//nodejs:node_arch.bzl", "node_arch")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -18,18 +18,12 @@ USER = [
     "nonroot",
 ]
 
-# Function to filter architectures based on Node.js version
-def filter_architectures(major_version):
-    if int(major_version) >= 24:
-        return [arch for arch in ARCHITECTURES if arch != "arm"]
-    return ARCHITECTURES
-
 [
     oci_image_index(
         name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + distro,
         images = [
             "nodejs" + major_version + ("" if (not mode) else mode) + "_" + user + "_" + arch + "_" + distro
-            for arch in filter_architectures(major_version)
+            for arch in node_arch(major_version)
         ],
     )
     for mode in MODE
@@ -50,7 +44,7 @@ def filter_architectures(major_version):
     for mode in MODE
     for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in filter_architectures(major_version)
+    for arch in node_arch(major_version)
     for distro in DISTROS
 ]
 
@@ -71,7 +65,7 @@ def filter_architectures(major_version):
     for mode in MODE
     for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in filter_architectures(major_version)
+    for arch in node_arch(major_version)
     for distro in DISTROS
 ]
 
@@ -91,7 +85,7 @@ pkg_tar(
     for mode in MODE
     for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in filter_architectures(major_version)
+    for arch in node_arch(major_version)
     for distro in DISTROS
 ]
 
@@ -108,6 +102,6 @@ pkg_tar(
     for mode in MODE
     for user in USER
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in filter_architectures(major_version)
+    for arch in node_arch(major_version)
     for distro in DISTROS
 ]
